# prql_rs

./: .gitignore  README.md  mix.exs
.github/workflows/: precompile.yml
config/: config.exs
lib/: prql.ex  prql_rs.ex
lib/prql/: native.ex  options.ex
native/prql_native/: Cargo.toml
native/prql_native/src/: lib.rs
test/: prql_rs_test.exs  prql_test.exs
