[package]
name = "prql_native"
version = "0.1.0"
authors = []
edition = "2021"
description = "Rustler wrapper for the prqlc compiler"
license = "Apache-2.0"
repository = "https://github.com/dkuku/prql_rs"

[lib]
name = "prql_native"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.36", default-features = false, features = ["nif_version_2_15"] }
prqlc = { version = "0.13", default-features = false }
thiserror = { version = "1.0", default-features = false }

[profile.release]
# Optimize for size
opt-level = "z"  # Optimize for size
lto = true       # Enable link-time optimization
codegen-units = 1 # Slower compilation but better optimization
strip = true     # Strip debug symbols
panic = "abort"  # Don't generate unwinding info
